--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,44 +73,42 @@
                                         <a href="#">Shop</a>
                                         <ul class="mega-menu">
                                             <li class="mega-menu-col">
-                                                <h4 class="mega-menu-title">Shop Layout</h4>
                                                 <ul class="m-b-n10">
-                                                    <li><a href="shop.html">Shop Grid</a></li>
-                                                    <li><a href="shop-left-sidebar.html">Left Sidebar</a></li>
-                                                    <li><a href="shop-right-sidebar.html">Right Sidebar</a></li>
-                                                    <li><a href="shop-list-fullwidth.html">List Fullwidth</a></li>
-                                                    <li><a href="shop-list-left-sidebar.html">List Left Sidebar</a></li>
-                                                    <li><a href="shop-list-right-sidebar.html">List Right Sidebar</a></li>
+                                                    <li><a href="#">Hệ thống nhà hàng phố 79</a></li>
+                                                    <li><a href="#">Chuỗi Ân Nam Quán</a></li>
+                                                    <li><a href="#">Nhà hàng sườn nướng Hàn Quốc</a></li>
+                                                    <li><a href="#">Chuỗi Lẫu Cua Đất Mũi</a></li>
+                                                    <li><a href="#">Nhà hàng EON 51</a></li>
                                                 </ul>
                                             </li>
                                             <li class="mega-menu-col">
-                                                <h4 class="mega-menu-title">Product Layout</h4>
                                                 <ul class="m-b-n10">
-                                                    <li><a href="single-product.html">Single Product</a></li>
-                                                    <li><a href="single-product-sale.html">Single Product Sale</a></li>
-                                                    <li><a href="single-product-variable.html">Single Product Variable</a></li>
-                                                    <li><a href="single-product-countdown.html">Single Product Countdown</a></li>
-                                                    <li><a href="single-product-affiliate.html">Single Product Affiliate</a></li>
-                                                    <li><a href="single-product-slider.html">Single Product Slider</a></li>
+                                                    <li><a href="#">Nhà hàng Út Cà Mau</a></li>
+                                                    <li><a href="#">Buffet Hoàng Yến</a></li>
+                                                    <li><a href="#">Hàng Dương Quán</a></li>
+                                                    <li><a href="#">Nhà hàng Gạo</a></li>
+                                                    <li><a href="#">Chuỗi King BBQ - Vua nướng Korea</a></li>
                                                 </ul>
                                             </li>
                                             <li class="mega-menu-col">
-                                                <h4 class="mega-menu-title">Other Pages</h4>
                                                 <ul class="m-b-n10">
-                                                    <li><a href="my-account.html">My Account</a></li>
-                                                    <li><a href="login.html">Login | Register</a></li>
-                                                    <li><a href="wishlist.html">Wishlist</a></li>
-                                                    <li><a href="cart.html">Cart</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
-                                                    <li><a href="compare.html">Compare</a></li>
+                                                    <li><a href="#">Soa soa</a></li>
+                                                    <li><a href="#">Quê nhà</a></li>
+                                                    <li><a href="#">Red Chilli Sea Food</a></li>
+                                                    <li><a href="#">Chuỗi San Fu Lou</a></li>
+                                                    <li><a href="#">Chuỗi Dìn Kí</a></li>
+                                                   
                                                 </ul>
                                             </li>
                                             <li class="mega-menu-col">
-                                                <div class="megamenu-image">
-                                                    <a href="shop.html">
-                                                        <img class="fit-image" src="/images/header/mega-menu.png" alt="Megamenu Image">
-                                                    </a>
-                                                </div>
+                                                <ul class="m-b-n10">
+                                                    <li><a href="#">Soa soa</a></li>
+                                                    <li><a href="#">Quê nhà</a></li>
+                                                    <li><a href="#">Red Chilli Sea Food</a></li>
+                                                    <li><a href="#">Chuỗi San Fu Lou</a></li>
+                                                    <li><a href="#">Chuỗi Dìn Kí</a></li>
+                                                   
+                                                </ul>
                                             </li>
                                         </ul>
                                     </li>
@@ -1985,12 +1983,12 @@
                         <ul class="mobile-menu">
                             <li class="has-children">
                                 <a href="#">Home <i class="fa fa-angle-down"></i></a>
-                                <ul class="dropdown">
+                                <!-- <ul class="dropdown">
                                     <li><a href="index.html">Home One</a></li>
-                                    <li><a href="index-2.html">Home Two</a></li>
+                                    <li><a hef="index-2.html">Home Two</a></li>
                                     <li><a href="index-3.html">Home Three</a></li>
                                     <li><a href="index-4.html">Home Four</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li class="has-children">
                                 <a href="#">Shop <i class="fa fa-angle-down" aria-hidden="true"></i></a>
