--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,10 +1,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amber - Pet Care Bootstrap 5 Template</title>
+    <title>Restaurants in your heart</title>
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="shortcut icon" href="/images/favico.ico">
 
     <!-- Vendor CSS (Icon Font) -->
 
