--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -15,7 +15,7 @@
                         <!-- Header Logo Start -->
                         <div class="col-lg-3 col-md-4 col-6">
                             <div class="header-logo">
-                                <a href="index.html"><img src="images/logo/logo.png" alt="Site Logo" /></a>
+                                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Site Logo" /></a>
                             </div>
                         </div>
                         <!-- Header Logo End -->
@@ -232,10 +232,10 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="breadcrumb-wrapper">
-                        <h2 class="breadcrumb-title">Giỏ hàng</h2>
+                        <h2 class="breadcrumb-title">Contact Us</h2>
                         <ul>
-                            <li><a href="index.html">Trang chủ</a></li>
-                            <li>Giỏ hàng</li>
+                            <li><a href="index.html">Home</a></li>
+                            <li>Contact Us</li>
                         </ul>
                     </div>
                 </div>
@@ -244,173 +244,104 @@
     </div>
     <!-- Breadcrumb Area End -->
 
-    <!-- Shopping Cart Section Start -->
+    <!-- Contact Us Section Start -->
     <div class="section section-margin">
         <div class="container">
 
-            <div class="row">
-                <div class="col-12">
+            <div class="row m-b-n50">
+                <div class="col-12 col-lg-6 m-b-50 order-2 order-lg-1" data-aos="fade-up" data-aos-duration="1000">
 
-                    <!-- Cart Table Start -->
-                    <div class="cart-table table-responsive">
-                        <table class="table table-bordered">
-
-                            <!-- Table Head Start -->
-                            <thead>
-                                <tr>
-                                    <th class="pro-thumbnail">Image</th>
-                                    <th class="pro-title">Product</th>
-                                    <th class="pro-price">Price</th>
-                                    <th class="pro-quantity">Quantity</th>
-                                    <th class="pro-subtotal">Total</th>
-                                    <th class="pro-remove">Remove</th>
-                                </tr>
-                            </thead>
-                            <!-- Table Head End -->
-
-                            <!-- Table Body Start -->
-                            <tbody>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/6.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Learn About Fish Farming</a></td>
-                                    <td class="pro-price"><span>$95.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$95.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/5.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Basic Birds Food</a></td>
-                                    <td class="pro-price"><span>$75.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$75.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/3.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Dog Trainning Center</a></td>
-                                    <td class="pro-price"><span>$28.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$56.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/4.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Animal Rescue Center</a></td>
-                                    <td class="pro-price"><span>$20.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$40.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                            </tbody>
-                            <!-- Table Body End -->
-
-                        </table>
+                    <!-- Section Title Start -->
+                    <div class="contact-title p-b-15">
+                        <h2 class="title">Get in Touch</h2>
                     </div>
-                    <!-- Cart Table End -->
+                    <!-- Section Title End -->
 
-                    <!-- Cart Button Start -->
-                    <div class="cart-button-section m-b-n20">
+                    <!-- Contact Form Wrapper Start -->
+                    <div class="contact-form-wrapper contact-form">
+                        <form action="assets/php/amber.php" id="contact-form" method="post">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="row">
 
-                        <!-- Cart Button left Side Start -->
-                        <div class="cart-btn-lef-side m-b-20">
-                            <a href="#" class="btn btn btn-gray-deep btn-hover-primary">Continue Shopping</a>
-                            <a href="#" class="btn btn btn-gray-deep btn-hover-primary">Update Shopping Cart</a>
-                        </div>
-                        <!-- Cart Button left Side End -->
+                                        <div class="col-md-6">
+                                            <div class="input-area m-b-20">
+                                                <input class="input-item" type="text" placeholder="Your Name *" name="name">
+                                            </div>
+                                        </div>
 
-                        <!-- Cart Button Right Side Start -->
-                        <div class="cart-btn-right-right m-b-20">
-                            <a href="#" class="btn btn btn-gray-deep btn-hover-primary">Clear Shopping Cart</a>
-                        </div>
-                        <!-- Cart Button Right Side End -->
+                                        <div class="col-md-6">
+                                            <div class="input-area m-b-20">
+                                                <input class="input-item" type="email" placeholder="Email *" name="email">
+                                            </div>
+                                        </div>
 
+                                        <div class="col-12">
+                                            <div class="input-area m-b-20">
+                                                <input class="input-item" type="text" placeholder="Subject *" name="subject">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-12">
+                                            <div class="input-area m-b-40">
+                                                <textarea cols="30" rows="5" class="textarea-item" name="message" placeholder="Message"></textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-12">
+                                            <button type="submit" id="submit" name="submit" class="btn btn-primary btn-hover-dark">Send Message</button>
+                                        </div>
+                                        <p class="col-8 form-message mb-0"></p>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        <p class="form-messege"></p>
                     </div>
-                    <!-- Cart Button End -->
+                    <!-- Contact Form Wrapper End -->
 
                 </div>
-            </div>
+                <div class="col-12 col-lg-6 m-b-50 order-1 order-lg-2" data-aos="fade-up" data-aos-duration="1500">
+                    <!-- Section Title Start -->
+                    <div class="contact-title p-b-15">
+                        <h2 class="title">Contact Us</h2>
+                    </div>
+                    <!-- Section Title End -->
+                    <div class="contact-content">
+                        <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram anteposuerit litterarum formas human.</p>
+                        <address class="contact-block">
+                            <ul>
+                                <li><i class="fa fa-fax"></i> Your address goes here</li>
+                                <li><i class="fa fa-phone"></i> <a href="tel:123-123-456-789">123 123 456 789</a></li>
+                                <li><i class="fa fa-envelope-o"></i> <a href="mailto:demo@example.com">demo@example.com </a></li>
+                            </ul>
+                        </address>
 
-            <div class="row m-t-50">
-                <div class="col-lg-6 me-0 ms-auto">
-
-                    <!-- Cart Calculation Area Start -->
-                    <div class="cart-calculator-wrapper">
-
-                        <!-- Cart Calculate Items Start -->
-                        <div class="cart-calculate-items">
-
-                            <!-- Cart Calculate Items Title Start -->
-                            <h3 class="title">Cart Totals</h3>
-                            <!-- Cart Calculate Items Title End -->
-
-                            <!-- Responsive Table Start -->
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <tr>
-                                        <td>Sub Total</td>
-                                        <td>$230</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shipping</td>
-                                        <td>$70</td>
-                                    </tr>
-                                    <tr class="total">
-                                        <td>Total</td>
-                                        <td class="total-amount">$300</td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <!-- Responsive Table End -->
-
+                        <div class="working-time">
+                            <h6 class="title">Working Hours</h6>
+                            <p>Monday – Saturday:08AM – 22PM</p>
                         </div>
-                        <!-- Cart Calculate Items End -->
-
-                        <!-- Cart Checktout Button Start -->
-                        <a href="checkout.html" class="btn btn btn-gray-deep btn-hover-primary m-t-30">Proceed To Checkout</a>
-                        <!-- Cart Checktout Button End -->
 
                     </div>
-                    <!-- Cart Calculation Area End -->
-
                 </div>
             </div>
 
         </div>
     </div>
-    <!-- Shopping Cart Section End -->
+    <!-- Contact us Section End -->
+
+    <!-- Contact Map Start -->
+    <div class="section">
+
+        <!-- Google Map Area Start -->
+        <div class="google-map-area w-100" data-aos="fade-up" data-aos-duration="1000">
+            <iframe class="contact-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2136.986005919501!2d-73.9685579655238!3d40.75862446708152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258e4a1c884e5%3A0x24fe1071086b36d5!2sThe%20Atrium!5e0!3m2!1sen!2sbd!4v1585132512970!5m2!1sen!2sbd"></iframe>
+        </div>
+        <!-- Google Map Area Start -->
+
+    </div>
+    <!-- Contact Map End -->
 
     <!-- Footer Section Start -->
     <footer class="section footer-section">
@@ -635,7 +566,7 @@
                             <div class="payment-option m-t-20 d-flex justify-content-start">
                                 <span><strong>Payment: </strong></span>
                                 <a href="#">
-                                    <img class="fit-image m-l-5" src="images/payment/payment_large.png" alt="Payment Option Image">
+                                    <img class="fit-image m-l-5" src="assets/images/payment/payment_large.png" alt="Payment Option Image">
                                 </a>
                             </div>
                             <!-- Payment Option End -->
@@ -801,38 +732,6 @@
         </div>
         <!-- Mobile Menu Inner End -->
     </div>
-    <!-- Mobile Menu End -->
-
-    <!-- Global Vendor, plugins JS -->
-
-    <!-- Vendor JS -->
-
-
-    <!-- 
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.3.2.min.js"></script>
-    <script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>   
-    -->
-
-
-    <!-- Plugins JS -->
-
-
-    <!-- 
-    <script src="assets/js/plugins/aos.min.js"></script>
-    <script src="assets/js/plugins/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/js/plugins/jquery-ui.min.js"></script>
-    <script src="assets/js/plugins/nice-select.min.js"></script>
-    <script src="assets/js/plugins/swiper-bundle.min.js"></script>
-    <script src="assets/js/plugins/countdown.min.js"></script>
-    <script src="assets/js/plugins/lightgallery-all.min.js"></script>  
-    -->
-
-
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-
     <script src="js/vendor.min.js"></script>
     <script src="js/plugins.min.js"></script>
 
