--- a/views/myaccount.ejs
+++ b/views/myaccount.ejs
@@ -34,82 +34,58 @@
                             <div class="main-menu">
                                 <ul>
                                     <li class="has-children">
-                                        <a href="#">Home</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home 1</a></li>
-                                            <li><a href="index-2.html">Home 2</a></li>
-                                            <li><a href="index-3.html">Home 3</a></li>
-                                            <li><a href="index-4.html">Home 4</a></li>
-                                        </ul>
+                                        <a href="index-3.html">Trang chủ</a>
                                     </li>
                                     <li class="has-children position-static">
-                                        <a href="#">Shop</a>
+                                        <a href="#">Nhà hàng</a>
                                         <ul class="mega-menu">
                                             <li class="mega-menu-col">
-                                                <h4 class="mega-menu-title">Shop Layout</h4>
                                                 <ul class="m-b-n10">
-                                                    <li><a href="shop.html">Shop Grid</a></li>
-                                                    <li><a href="shop-left-sidebar.html">Left Sidebar</a></li>
-                                                    <li><a href="shop-right-sidebar.html">Right Sidebar</a></li>
-                                                    <li><a href="shop-list-fullwidth.html">List Fullwidth</a></li>
-                                                    <li><a href="shop-list-left-sidebar.html">List Left Sidebar</a></li>
-                                                    <li><a href="shop-list-right-sidebar.html">List Right Sidebar</a></li>
+                                                    <li><a href="#">Hệ thống nhà hàng phố 79</a></li>
+                                                    <li><a href="#">Chuỗi Ân Nam Quán</a></li>
+                                                    <li><a href="#">Nhà hàng sườn nướng Hàn Quốc</a></li>
+                                                    <li><a href="#">Chuỗi Lẫu Cua Đất Mũi</a></li>
+                                                    <li><a href="#">Nhà hàng EON 51</a></li>
                                                 </ul>
                                             </li>
                                             <li class="mega-menu-col">
-                                                <h4 class="mega-menu-title">Product Layout</h4>
                                                 <ul class="m-b-n10">
-                                                    <li><a href="single-product.html">Single Product</a></li>
-                                                    <li><a href="single-product-sale.html">Single Product Sale</a></li>
-                                                    <li><a href="single-product-variable.html">Single Product Variable</a></li>
-                                                    <li><a href="single-product-countdown.html">Single Product Countdown</a></li>
-                                                    <li><a href="single-product-affiliate.html">Single Product Affiliate</a></li>
-                                                    <li><a href="single-product-slider.html">Single Product Slider</a></li>
+                                                    <li><a href="#">Nhà hàng Út Cà Mau</a></li>
+                                                    <li><a href="#">Buffet Hoàng Yến</a></li>
+                                                    <li><a href="#">Hàng Dương Quán</a></li>
+                                                    <li><a href="#">Nhà hàng Gạo</a></li>
+                                                    <li><a href="#">Chuỗi King BBQ - Vua nướng Korea</a></li>
                                                 </ul>
                                             </li>
                                             <li class="mega-menu-col">
-                                                <h4 class="mega-menu-title">Other Pages</h4>
                                                 <ul class="m-b-n10">
-                                                    <li><a href="my-account.html">My Account</a></li>
-                                                    <li><a href="login.html">Login | Register</a></li>
-                                                    <li><a href="wishlist.html">Wishlist</a></li>
-                                                    <li><a href="cart.html">Cart</a></li>
-                                                    <li><a href="checkout.html">Checkout</a></li>
-                                                    <li><a href="compare.html">Compare</a></li>
+                                                    <li><a href="#">Soa soa</a></li>
+                                                    <li><a href="#">Quê nhà</a></li>
+                                                    <li><a href="#">Red Chilli Sea Food</a></li>
+                                                    <li><a href="#">Chuỗi San Fu Lou</a></li>
+                                                    <li><a href="#">Chuỗi Dìn Kí</a></li>
+                                                   
                                                 </ul>
                                             </li>
                                             <li class="mega-menu-col">
-                                                <div class="megamenu-image">
-                                                    <a href="shop.html">
-                                                        <img class="fit-image" src="assets/images/header/mega-menu.png" alt="Megamenu Image">
-                                                    </a>
-                                                </div>
+                                                <ul class="m-b-n10">
+                                                    <li><a href="#">Soa soa</a></li>
+                                                    <li><a href="#">Quê nhà</a></li>
+                                                    <li><a href="#">Red Chilli Sea Food</a></li>
+                                                    <li><a href="#">Chuỗi San Fu Lou</a></li>
+                                                    <li><a href="#">Chuỗi Dìn Kí</a></li>
+                                                   
+                                                </ul>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="has-children">
-                                        <a href="#">Pages</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="contact.html">Contact Us</a></li>
-                                            <li><a href="error-404.html">Error 404</a></li>
-                                            <li><a href="faq.html">FAQ</a></li>
-                                            <li><a href="login.html">Login</a></li>
-                                            <li><a href="register.html">Register</a></li>
-                                        </ul>
+                                        <a href="#">Giới thiệu</a>
                                     </li>
                                     <li class="has-children">
-                                        <a href="#">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                                            <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                                            <li><a href="blog-details.html">Blog Details</a></li>
-                                            <li><a href="blog-details-sidebar.html">Blog Details Sidebar</a></li>
-                                        </ul>
+                                        <a href="#">Liên hệ</a>
                                     </li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                   
                                 </ul>
                             </div>
                         </div>
