--- a/views/error404.ejs
+++ b/views/error404.ejs
@@ -6,6 +6,7 @@
 <body>
     <!-- Header Section Start -->
     <div class="header section">
+
         <!-- Header Bottom Start -->
         <div class="header-bottom">
             <div class="header-sticky">
@@ -26,6 +27,12 @@
                                 <ul>
                                     <li class="has-children">
                                         <a href="index-3.html">Trang chủ</a>
+                                        <!-- <ul class="sub-menu">
+                                            <li><a href="index.html">Home 1</a></li>
+                                            <li><a href="index-2.html">Home 2</a></li>
+                                            <li><a href="index-3.html">Home 3</a></li>
+                                            <li><a href="index-4.html">Home 4</a></li>
+                                        </ul> -->
                                     </li>
                                     <li class="has-children position-static">
                                         <a href="#">Nhà hàng</a>
@@ -232,10 +239,10 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="breadcrumb-wrapper">
-                        <h2 class="breadcrumb-title">Giỏ hàng</h2>
+                        <h2 class="breadcrumb-title">Error 404</h2>
                         <ul>
-                            <li><a href="index.html">Trang chủ</a></li>
-                            <li>Giỏ hàng</li>
+                            <li><a href="index.html">Home</a></li>
+                            <li>Error 404</li>
                         </ul>
                     </div>
                 </div>
@@ -244,173 +251,29 @@
     </div>
     <!-- Breadcrumb Area End -->
 
-    <!-- Shopping Cart Section Start -->
+    <!-- Error 404 Section Start -->
     <div class="section section-margin">
         <div class="container">
-
             <div class="row">
                 <div class="col-12">
-
-                    <!-- Cart Table Start -->
-                    <div class="cart-table table-responsive">
-                        <table class="table table-bordered">
-
-                            <!-- Table Head Start -->
-                            <thead>
-                                <tr>
-                                    <th class="pro-thumbnail">Image</th>
-                                    <th class="pro-title">Product</th>
-                                    <th class="pro-price">Price</th>
-                                    <th class="pro-quantity">Quantity</th>
-                                    <th class="pro-subtotal">Total</th>
-                                    <th class="pro-remove">Remove</th>
-                                </tr>
-                            </thead>
-                            <!-- Table Head End -->
-
-                            <!-- Table Body Start -->
-                            <tbody>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/6.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Learn About Fish Farming</a></td>
-                                    <td class="pro-price"><span>$95.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$95.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/5.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Basic Birds Food</a></td>
-                                    <td class="pro-price"><span>$75.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$75.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/3.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Dog Trainning Center</a></td>
-                                    <td class="pro-price"><span>$28.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$56.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td class="pro-thumbnail"><a href="#"><img class="fit-image" src="assets/images/products/small-product/4.png" alt="Product" /></a></td>
-                                    <td class="pro-title"><a href="#">Animal Rescue Center</a></td>
-                                    <td class="pro-price"><span>$20.00</span></td>
-                                    <td class="pro-quantity">
-                                        <div class="quantity">
-                                            <div class="cart-plus-minus">
-                                                <input class="cart-plus-minus-box" value="1" type="text">
-                                                <div class="dec qtybutton">-</div>
-                                                <div class="inc qtybutton">+</div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="pro-subtotal"><span>$40.00</span></td>
-                                    <td class="pro-remove"><a href="#"><i class="ti-trash"></i></a></td>
-                                </tr>
-                            </tbody>
-                            <!-- Table Body End -->
-
-                        </table>
+                    <!-- Error Form Start -->
+                    <div class="error_form">
+                        <h1 class="title">404</h1>
+                        <h2 class="sub-title">Opps! PAGE NOT BE FOUND</h2>
+                        <p>Sorry but the page you are looking for does not exist, have been<br> removed, name changed or is temporarily unavailable.</p>
+                        <form class="search-form-error" action="#">
+                            <input class="input-text" placeholder="Search..." type="text">
+                            <button class="submit-btn" type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                        <a href="index.html" class="btn btn-primary btn-hover-dark rounded-0 m-t-40">Back to home page</a>
                     </div>
-                    <!-- Cart Table End -->
-
-                    <!-- Cart Button Start -->
-                    <div class="cart-button-section m-b-n20">
-
-                        <!-- Cart Button left Side Start -->
-                        <div class="cart-btn-lef-side m-b-20">
-                            <a href="#" class="btn btn btn-gray-deep btn-hover-primary">Continue Shopping</a>
-                            <a href="#" class="btn btn btn-gray-deep btn-hover-primary">Update Shopping Cart</a>
-                        </div>
-                        <!-- Cart Button left Side End -->
-
-                        <!-- Cart Button Right Side Start -->
-                        <div class="cart-btn-right-right m-b-20">
-                            <a href="#" class="btn btn btn-gray-deep btn-hover-primary">Clear Shopping Cart</a>
-                        </div>
-                        <!-- Cart Button Right Side End -->
-
-                    </div>
-                    <!-- Cart Button End -->
+                    <!-- Error Form End -->
 
                 </div>
             </div>
-
-            <div class="row m-t-50">
-                <div class="col-lg-6 me-0 ms-auto">
-
-                    <!-- Cart Calculation Area Start -->
-                    <div class="cart-calculator-wrapper">
-
-                        <!-- Cart Calculate Items Start -->
-                        <div class="cart-calculate-items">
-
-                            <!-- Cart Calculate Items Title Start -->
-                            <h3 class="title">Cart Totals</h3>
-                            <!-- Cart Calculate Items Title End -->
-
-                            <!-- Responsive Table Start -->
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <tr>
-                                        <td>Sub Total</td>
-                                        <td>$230</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shipping</td>
-                                        <td>$70</td>
-                                    </tr>
-                                    <tr class="total">
-                                        <td>Total</td>
-                                        <td class="total-amount">$300</td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <!-- Responsive Table End -->
-
-                        </div>
-                        <!-- Cart Calculate Items End -->
-
-                        <!-- Cart Checktout Button Start -->
-                        <a href="checkout.html" class="btn btn btn-gray-deep btn-hover-primary m-t-30">Proceed To Checkout</a>
-                        <!-- Cart Checktout Button End -->
-
-                    </div>
-                    <!-- Cart Calculation Area End -->
-
-                </div>
-            </div>
-
         </div>
     </div>
-    <!-- Shopping Cart Section End -->
+    <!-- Error 404 Section End -->
 
     <!-- Footer Section Start -->
     <footer class="section footer-section">
@@ -635,7 +498,7 @@
                             <div class="payment-option m-t-20 d-flex justify-content-start">
                                 <span><strong>Payment: </strong></span>
                                 <a href="#">
-                                    <img class="fit-image m-l-5" src="images/payment/payment_large.png" alt="Payment Option Image">
+                                    <img class="fit-image m-l-5" src="assets/images/payment/payment_large.png" alt="Payment Option Image">
                                 </a>
                             </div>
                             <!-- Payment Option End -->
@@ -801,38 +664,6 @@
         </div>
         <!-- Mobile Menu Inner End -->
     </div>
-    <!-- Mobile Menu End -->
-
-    <!-- Global Vendor, plugins JS -->
-
-    <!-- Vendor JS -->
-
-
-    <!-- 
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-3.3.2.min.js"></script>
-    <script src="assets/js/vendor/modernizr-3.11.2.min.js"></script>   
-    -->
-
-
-    <!-- Plugins JS -->
-
-
-    <!-- 
-    <script src="assets/js/plugins/aos.min.js"></script>
-    <script src="assets/js/plugins/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/js/plugins/jquery-ui.min.js"></script>
-    <script src="assets/js/plugins/nice-select.min.js"></script>
-    <script src="assets/js/plugins/swiper-bundle.min.js"></script>
-    <script src="assets/js/plugins/countdown.min.js"></script>
-    <script src="assets/js/plugins/lightgallery-all.min.js"></script>  
-    -->
-
-
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-
     <script src="js/vendor.min.js"></script>
     <script src="js/plugins.min.js"></script>
 
